# PyJig

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  Pipfile  README.md  README.rst  build.sh  gui.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  python-package.yml
docs/: conf.py  index.rst
src/: __init__.py  app.py  gui.py  utils.py
src/core/: jigsaw.py
src/core/experiments/: img_contour_crop.py  orb.py  sift.py
src/core/experiments/cam_shift/: common.py  example_cam_shift.py  tst_scene_render.py  video.py
src/core/experiments/sift/: sift.py
src/core/rekognition/: video_processor.py
src/gui/: app_layout.py  context.py  core.py  elements.py  event_handlers.py  gui_context.py
src/pyjig/: __init__.py  app.py
src/pyjig/core/: jigsaw.py
src/pyjig/core/experiments/: img_contour_crop.py
src/pyjig/core/experiments/cam_shift/: common.py  tst_scene_render.py  video.py
src/pyjig/gui/: constants.py  context.py  core.py  elements.py  event_handlers.py
src/pyjig/utils/: img_utils.py  video_to_img.py
src/utils/: img_utils.py  video_to_img.py
test/gui/: test_core.py  test_elements.py  test_event_handlers.py
tests/: conftest.py
tests/gui/: test_core.py  test_event_handlers.py
